--- a/Calculator/Calculator/Calculator.csproj
+++ b/Calculator/Calculator/Calculator.csproj
@@ -43,10 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Add.cs" />
     <Compile Include="Container.cs" />
+    <Compile Include="Divide.cs" />
     <Compile Include="Expression.cs" />
+    <Compile Include="Moldulo.cs" />
+    <Compile Include="Multiply.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Subtract.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
