--- a/Calculator/Calculator/Calculator.csproj
+++ b/Calculator/Calculator/Calculator.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Multiply.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stack.cs" />
     <Compile Include="Subtract.cs" />
   </ItemGroup>
   <ItemGroup>
